# jj-android-device

./: .gitignore  CHANGELOG.dev.md  CHANGELOG.md  Cargo.toml  README.md  install.sh  workflow.md
plans/20260722/: feature.md
src/: adb.rs  cli.rs  collector.rs  device.rs  logs.rs  main.rs  netwatch.rs  procmap.rs  procs.rs  profile.rs  report.rs  screenshot.rs  session.rs  sink.rs  util.rs
